@@ -7,6 +7,7 @@ Broker:
 Client library:
 - Fix support for Python 2.6, 3.0, 3.1.
 - Add support for un/subscribing to multiple topics at once in un/subscribe().
+- Clients now close their socket after sending DISCONNECT.
 
 
 1.2 - 20130708
